--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "androidx.credentials:credentials:1.2.2"
+    implementation 'commons-codec:commons-codec:1.16.1'
 
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
