--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,11 +49,19 @@ dependencies {
     implementation "androidx.credentials:credentials:1.2.2"
     implementation 'commons-codec:commons-codec:1.16.1'
 
+    implementation 'org.apache.commons:commons-text:1.12.0'
+
+
+
     def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     implementation 'org.bouncycastle:bcprov-jdk18on:1.78'
+
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
 
     implementation files("libs/core-release.aar")
     implementation files("libs/ui-release.aar")
